<resources>
    <string name="app_name">Relax</string>
    <string name="todo">TODO</string>
    <string name="buttonStart">Начать</string>
    <string name="name_title">Руководство по снятию стресса</string>
<<<<<<< HEAD
    <string name="buttonLeft">Влево</string>
    <string name="buttonRight">Вправо</string>
    <string name="login">Вход</string>
    <string name="autorization">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>

=======
>>>>>>> main

    <string-array name="numbers">
        <item>1)Отвлекитесь от стрессовой ситуации</item>
        <item>2)Сделать рутинное дело необычным способом</item>
        <item>3)Порадуйте себя чем-то вкусным</item>
        <item>4)Смойте свои тревоги под душем</item>
        <item>5)Станьте художником на 5 минут</item>
        <item>6)Устройте физкульт-минутку</item>
        <item>7)Минута на размышление</item>
        <item>8)Ароматерапия</item>
        <item>9)Сьешьте жевательную резинку</item>
        <item>(Бонусный способ для любителей пива)</item>
<<<<<<< HEAD
    </string-array>
=======
        </string-array>
>>>>>>> main

    <string-array name="guide_text">
        <item>Чтобы отвлечься от стрессовой ситуации, необходимо подумать
            о чем-нибудь другом связанном с приятными ощущениями и переживаниями
            (отдых, приятное событие, личные достижения)</item>
        <item>Не держать в себе нахлынувшие чувства и эмоции, вызвавшие стресс,
            а выплеснуть наружу накопившуюся энергию, делая обычные дела
            креативным способом (например, помыть окно или пол зубной щеткой,
            протирание чистой посуды)</item>
        <item>Вкусная еда – эффективный антистрессовый допинг. Сохранить
            хорошее настроение, снять стресс помогает жирная рыба, в которой
            содержатся кислоты омега-3, очень полезные для нервной системы.
            Если не любите рыбу, съешьте мороженое или банан.Эти
            продукты действуют не хуже антидепрессантов.</item>
        <item>Справиться с эмоциональным негативом помогает 15-минутный душ.
            Встаньте под теплые струи воды, чтобы они массировали голову
            и плечи. Вскоре вы почувствуете, как вода
            уносит с собой все ненужное.</item>
        <item>Психологи обнаружили, что раскрашивание картинок в течение
            двух-трех минут в периоды повышенного стресса в пять раз
            увеличивает вероятность завершения работы в срок.</item>
        <item>У многих людей стресс выражается в том, что зажимаются,
            теряют эластичность мышцы и отсюда возникает дискомфорт.
            Дома и на работе можно выполнять несложные
            упражнения на расслабление: нужно вращать руками, сгибать
            их в разные стороны, а еще делать махи ногами.</item>
        <item>Найдите возможность упорядочить свои мысли. Включите
            любимую музыку, достаньте из холодильника любимое лакомство,
            устройтесь в любимом кресле. Подумайте, чего бы вам хотелось
            больше всего, и запишите желание на бумаге. </item>
        <item>Запахи сильно связаны с эмоциональной памятью. Поэтому очень
            полезно иметь под рукой аромат, ассоциирующийся с пережитыми
            минутами сильного счастья, восторга, блаженства. Вдыхайте его
            почаще, это поможет сохранить хорошее настроение.</item>
        <item>Использовать жевательную резинку можно не только для защиты от кариеса,
            но и для победы над стрессом. Всего 3 минуты жевания способствуют
            стабилизации психики, уменьшению уровня стресса.</item>
        <item>В Чехии снимают стресс, принимая пивные ванны.Чаще всего это
            50 % минеральной воды и 50 % сусла и пивных дрожжей. В последних
            содержатся различные аминокислоты, микроэлементы и ферменты,
            оказывающие благоприятное действие не только наружно, на кожу,
            но и на нервную систему организма.</item>

    </string-array>
</resources>